# lunar-boot

./: .gitignore  Cargo.toml  README.md  REUSE.toml
arch/aarch64/: lunar.lds
arch/aarch64/asm/: dtb.S  start.S
arch/generic/: section_names.h  sections.lds.h  sizes.h
arch/generic/asm/: utils.S.h
arch/riscv64/: lunar.lds
arch/riscv64/asm/: start.S
boards/qemu_aarch64_virt/: board.dts  memory.lds  memory.lds.h
boards/qemu_riscv64_virt/: memory.lds
src/: align.rs  fdt.rs  inttypes.rs  main.rs  mem.rs
src/mem/: start.rs
tools/hooks/: pre-commit
